--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -16,6 +16,7 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         flutter-version: '2.10.5'
+    - run: cd source
     - run: flutter pub get
     - run: flutter build web
     - uses: actions/upload-artifact@v2
