--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -20,6 +20,4 @@ jobs:
         cd source
         flutter pub get
         flutter build web
-        ls
-        echo
-    - uses: actions/upload-artifact@v2
+        cp -R source/build/web /
