--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -20,6 +20,7 @@ jobs:
         cd source
         flutter pub get
         flutter build web
+        cd build 
         ls
         echo
         cp -R source/build/web /
