--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -20,7 +20,4 @@ jobs:
         cd source
         flutter pub get
         flutter build web
-        cd build 
-        ls
-        echo
-        cp -R source/build/web /
+        cp -R source/build/web/ .
