--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -20,4 +20,4 @@ jobs:
         cd source
         flutter pub get
         flutter build web
-        cp -R source/build/web/ .
+        cp -R build/web/ ../
