--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,26 +19,40 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Setup PNPM
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       # Setup Node.js environment
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: pnpm
 
       # Install dependencies
-      - name: Install Dependencies
-        run: npm install
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
-      # Build the Astro project
-      - name: Build Astro Project
-        run: npm run build
+      # Build the Next.js project
+      - name: Build Next.js
+        run: pnpm build
+
+      # Export static site for GitHub Pages
+      - name: Export static site
+        run: pnpm exec next export
+
+      # Configure GitHub Pages
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
 
       # Upload build artifacts
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./out
 
   # Deployment job
   deploy:
@@ -50,4 +64,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
