--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,27 @@
-# build output
-dist/
-
-# generated types
-.astro/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules/
+/node_modules
 
-# logs
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.pnpm-debug.log*
 
-# environment variables
-.env
-.env.production
+# env files
+.env*
 
-# macOS-specific files
-.DS_Store
+# vercel
+.vercel
 
-# local folders
-.history
+# typescript
+*.tsbuildinfo
+next-env.d.ts
